Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-7343

sanity test_129: iam_lfix_init_new+0x5/0x20 [osd_ldiskfs]

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Critical Critical
    • Lustre 2.8.0
    • None
    • None
    • 3
    • 9223372036854775807

      This issue was created by maloo for Bob Glossman <bob.glossman@intel.com>

      This issue relates to the following test suite run: https://testing.hpdd.intel.com/test_sets/012ee7ca-7c33-11e5-9851-5254006e85c2.

      The sub-test test_129 failed with the following error:

      test failed to respond and timed out
      

      kernel panic
      seen with sles12 on master:
      panic stack trace, from console log on MDS2:

      19:17:40:[ 5923.422794] Lustre: DEBUG MARKER: test -e /sys/fs/ldiskfs/dm-3/max_dir_size
      19:17:40:[ 5923.504780] Lustre: DEBUG MARKER: echo 12288 >/sys/fs/ldiskfs/dm-3/max_dir_size
      19:17:40:[ 5929.137273] BUG: unable to handle kernel NULL pointer dereference at 000000000000000c
      19:17:40:[ 5929.140181] IP: [<ffffffffa0c7e965>] iam_lfix_init_new+0x5/0x20 [osd_ldiskfs]
      19:17:40:[ 5929.140181] PGD 0 
      19:17:40:[ 5929.140181] Oops: 0000 [#1] SMP 
      19:17:40:[ 5929.140181] Modules linked in: osp(OEN) mdd(OEN) lod(OEN) mdt(OEN) lfsck(OEN) mgc(OEN) osd_ldiskfs(OEN) lquota(OEN) fid(OEN) fld(OEN) ksocklnd(OEN) ptlrpc(OEN) obdclass(OEN) lnet(OEN) sha512_generic(E) crypto_null(E) libcfs(OEN) ldiskfs(OEN) rpcsec_gss_krb5(E) auth_rpcgss(E) nfsv4(E) dns_resolver(E) nfs(E) lockd(E) sunrpc(E) fscache(E) iscsi_boot_sysfs(E) af_packet(E) ib_ipoib(E) rdma_ucm(E) ib_ucm(E) ib_uverbs(E) ib_umad(E) rdma_cm(E) ib_cm(E) iw_cm(E) ib_sa(E) ib_mad(E) ib_core(E) ib_addr(E) ppdev(E) parport_pc(E) parport(E) pvpanic(E) virtio_balloon(E) 8139too(E) 8139cp(E) mii(E) processor(E) i2c_piix4(E) serio_raw(E) pcspkr(E) button(E) dm_mod(E) ext4(E) crc16(E) mbcache(E) jbd2(E) ata_generic(E) ata_piix(E) virtio_blk(E) ahci(E) libahci(E) floppy(E) uhci_hcd(E) ehci_hcd(E) cirrus(E) syscopyarea(E) sysfillrect(E) sysimgblt(E) drm_kms_helper(E) ttm(E) drm(E) virtio_pci(E) virtio_ring(E) virtio(E) usbcore(E) usb_common(E) libata(E) sg(E) scsi_mod(E) autofs4(E)
      19:17:40:[ 5929.140181] Supported: No, Unsupported modules are loaded
      19:17:40:[ 5929.140181] CPU: 0 PID: 9485 Comm: mdt00_004 Tainted: G           OEN  3.12.48-52.27_lustre.gaaf427b-default #1
      19:17:40:[ 5929.140181] Hardware name: Red Hat KVM, BIOS 0.5.1 01/01/2007
      19:17:40:[ 5929.140181] task: ffff88005416c1c0 ti: ffff88005416e000 task.ti: ffff88005416e000
      19:17:40:[ 5929.140181] RIP: 0010:[<ffffffffa0c7e965>]  [<ffffffffa0c7e965>] iam_lfix_init_new+0x5/0x20 [osd_ldiskfs]
      19:17:40:[ 5929.140181] RSP: 0018:ffff88005416f518  EFLAGS: 00010286
      19:17:40:[ 5929.140181] RAX: ffff880052ec9978 RBX: ffff88005416f598 RCX: 000000000000250d
      19:17:40:[ 5929.140181] RDX: ffffffffa0cb4a20 RSI: ffffffffffffffe4 RDI: ffff88005ae88a88
      19:17:40:[ 5929.140181] RBP: ffff8800384aa6d8 R08: 7010000000000000 R09: 007a6db9b8080000
      19:17:40:[ 5929.140181] R10: ff679264e3666e02 R11: 000000000000000f R12: ffff880054044338
      19:17:40:[ 5929.140181] R13: ffff880054044360 R14: ffff88005416f678 R15: ffff88005ae88a88
      19:17:40:[ 5929.140181] FS:  0000000000000000(0000) GS:ffff88007fc00000(0000) knlGS:0000000000000000
      19:17:40:[ 5929.140181] CS:  0010 DS: 0000 ES: 0000 CR0: 000000008005003b
      19:17:40:[ 5929.140181] CR2: 000000000000000c CR3: 0000000036421000 CR4: 00000000000006f0
      19:17:40:[ 5929.140181] Stack:
      19:17:40:[ 5929.140181]  ffffffffa0c7dd8e ffff88005416f598 ffff880052ec9978 ffff88005d0533e8
      19:17:40:[ 5929.140181]  ffffffffa0c7c6ee 0000000000000000 ffff880052ec9978 ffffffffffffffe4
      19:17:41:[ 5929.140181]  0000000000000000 ffff880054044338 ffff8800384aa6d8 ffff880054044360
      19:17:41:[ 5929.140181] Call Trace:
      19:17:41:[ 5929.140181]  [<ffffffffa0c7dd8e>] iam_add_rec+0x1ce/0x2c0 [osd_ldiskfs]
      19:17:41:[ 5929.140181]  [<ffffffffa0c7e650>] iam_insert+0x90/0xe0 [osd_ldiskfs]
      19:17:41:[ 5929.140181]  [<ffffffffa0c75eb5>] osd_oi_iam_refresh.isra.15+0x125/0x2a0 [osd_ldiskfs]
      19:17:41:[ 5929.140181]  [<ffffffffa0c789df>] osd_oi_insert+0x13f/0x490 [osd_ldiskfs]
      19:17:41:[ 5929.140181]  [<ffffffffa0c73122>] osd_object_ea_create+0x632/0xb90 [osd_ldiskfs]
      19:17:41:[ 5929.140181]  [<ffffffffa0ef11ec>] lod_sub_object_create+0x1ec/0x470 [lod]
      19:17:41:[ 5929.140181]  [<ffffffffa0ee87e7>] lod_object_create+0xa7/0x200 [lod]
      19:17:41:[ 5929.140181]  [<ffffffffa0f51571>] mdd_object_create_internal+0xb1/0x270 [mdd]
      19:17:41:[ 5929.140181]  [<ffffffffa0f3c735>] mdd_object_create+0x55/0xa30 [mdd]
      19:17:41:[ 5929.140181]  [<ffffffffa0f47940>] mdd_create+0xca0/0x1240 [mdd]
      19:17:41:[ 5929.140181]  [<ffffffffa0e19952>] mdt_reint_open+0x2082/0x30c0 [mdt]
      19:17:41:[ 5929.140181]  [<ffffffffa0e0e1e6>] mdt_reint_rec+0x76/0x200 [mdt]
      19:17:41:[ 5929.140181]  [<ffffffffa0df2547>] mdt_reint_internal+0x5c7/0xaa0 [mdt]
      19:17:41:[ 5929.140181]  [<ffffffffa0df2b82>] mdt_intent_reint+0x162/0x410 [mdt]
      19:17:41:[ 5929.140181]  [<ffffffffa0dfbecc>] mdt_intent_policy+0x59c/0xb50 [mdt]
      19:17:41:[ 5929.140181]  [<ffffffffa09d7f73>] ldlm_lock_enqueue+0x323/0x890 [ptlrpc]
      19:17:41:[ 5929.140181]  [<ffffffffa0a00661>] ldlm_handle_enqueue0+0x741/0x1870 [ptlrpc]
      19:17:41:[ 5929.140181]  [<ffffffffa0a83b1d>] tgt_enqueue+0x5d/0x210 [ptlrpc]
      19:17:41:[ 5929.140181]  [<ffffffffa0a87513>] tgt_request_handle+0x7e3/0x1190 [ptlrpc]
      19:17:41:[ 5929.140181]  [<ffffffffa0a31da9>] ptlrpc_server_handle_request+0x209/0xa70 [ptlrpc]
      19:17:42:[ 5929.140181]  [<ffffffffa0a354ba>] ptlrpc_main+0xb2a/0x1ea0 [ptlrpc]
      19:17:42:[ 5929.140181]  [<ffffffff81077114>] kthread+0xb4/0xc0
      19:17:42:[ 5929.140181]  [<ffffffff81521198>] ret_from_fork+0x58/0x90
      19:17:42:[ 5929.140181] Code: 8b 72 18 0f b7 40 02 01 ce 0f af c6 48 98 48 03 47 10 48 39 47 18 0f 94 c0 0f b6 c0 c3 66 0f 1f 84 00 00 00 00 00 0f 1f 44 00 00 <48> 8b 46 28 ba 76 19 00 00 31 c9 66 89 10 66 89 48 02 c3 0f 1f 
      20:17:47:********** Timeout by autotest system **********
      

      Info required for matching: sanity 129

            yong.fan nasf (Inactive)
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved: