LU-7343 osd-ldiskfs: handle ldiskfs_append failure

On SLES 12 (linux-3.12.48-52.27), the ldiskfs exported function
ldiskfs_append() return error# via the return value, instead of
via the output parameter @err as it does on other kernels, such
as linux-2.6.32. Under such case, the caller should not assume
non-NULL returned value is valid buffer head, it can stands for
error#. So check that properly.

Signed-off-by: Fan Yong <fan.yong@intel.com>
Change-Id: I4dca43bcfd31aafd999f54934a51d258071dab22